ubah transactions ke business transaction
