# app/Http/Controllers/API/BusinessTransactionItemAPIController.php
@@ -3,16 +3,16 @@
 namespace App\Http\Controllers\API;
 
 use App\Http\Controllers\Controller;
-use App\Models\TransactionItem;
+use App\Models\BusinessTransactionItem;
 
-class TransactionItemAPIController extends Controller
+class BusinessTransactionItemAPIController extends Controller
 {
 
     /**
      * @OA\Get(
-     *      path="/api/transactionItems",
+     *      path="/api/businessTransactionItems",
      *      summary="Get transaction item data",
-     *      tags={"Transaction Items"},
+     *      tags={"Business Transaction Items"},
      *      description="Get transaction item",
      *      security={{"bearer":{}}},
      *      @OA\Response(
@@ -23,7 +23,7 @@ class TransactionItemAPIController extends Controller
      */
     public function get()
     {
-        $transactionItems = TransactionItem::all()->toArray();
+        $transactionItems = BusinessTransactionItem::all()->toArray();
         return $this->sendResponse($transactionItems, __('messages.retrivied'));
     }
 
