# app/Http/Requests/BusinessTransaction/CreateBusinessTransactionAPIRequest.php
@@ -1,10 +1,10 @@
 <?php
 
-namespace App\Http\Requests\Transaction;
+namespace App\Http\Requests\BusinessTransaction;
 
 use Illuminate\Foundation\Http\FormRequest;
 
-class CreateTransactionAPIRequest extends FormRequest
+class CreateBusinessTransactionAPIRequest extends FormRequest
 {
 
     use WriteRuleTrait;
@@ -18,8 +18,8 @@ class CreateTransactionAPIRequest extends FormRequest
     {
         return [
             'business_id' => $this->getBusinessIdRules(),
-            'transaction_type_id' => $this->getTransactionTypeIdRules(),
-            'transaction_item_id' => $this->getTransactionItemIdRules(),
+            'business_transaction_type_id' => $this->getBusinessTransactionTypeIdRules(),
+            'business_transaction_item_id' => $this->getBusinessTransactionItemIdRules(),
             'total' => $this->getTotalRules(),
             'multiplier' => $this->getMultiplierRules(),
             'date' => $this->getDateRules(),
