# app/Http/Requests/BusinessTransaction/UpdateBusinessTransactionAPIRequest.php
@@ -1,10 +1,10 @@
 <?php
 
-namespace App\Http\Requests\Transaction;
+namespace App\Http\Requests\BusinessTransaction;
 
 use Illuminate\Foundation\Http\FormRequest;
 
-class UpdateTransactionAPIRequest extends FormRequest
+class UpdateBusinessTransactionAPIRequest extends FormRequest
 {
 
     use WriteRuleTrait;
@@ -19,8 +19,8 @@ class UpdateTransactionAPIRequest extends FormRequest
         return [
             'id' => $this->getIdRules(),
             'business_id' => $this->getBusinessIdRules(),
-            'transaction_type_id' => $this->getTransactionTypeIdRules(),
-            'transaction_item_id' => $this->getTransactionItemIdRules(),
+            'business_transaction_type_id' => $this->getBusinessTransactionTypeIdRules(),
+            'business_transaction_item_id' => $this->getBusinessTransactionItemIdRules(),
             'total' => $this->getTotalRules(),
             'multiplier' => $this->getMultiplierRules(),
             'date' => $this->getDateRules(),
